invoice lists, invoice details dashboard

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -141,6 +141,20 @@ ul.navbar-nav a{
 
 
 
+
+
+
+
+
+
+
+/**/
+
+
+
+
+
+
 /* 
 =======================================================================\*/
 /* responsive css*/
